# algorithms

./: LICENSE  README.md
othello/: Board.py  CMakeCache.txt  CMakeLists.txt  HumanPlayer.py  LocalGame.py  Makefile  MyPlayer.py  ProPlayer.cxx  ProPlayer.i  ProPlayer.py  ProPlayerPYTHON_wrap.cxx  ProPlayer_wrap.c  RandomPlayer.py  Server.py  cmake_install.cmake  comandos.txt
othello/Documentation/: Proyecto_AAlg.lyx
othello/prueba.dSYM/Contents/Resources/DWARF/: prueba
taller1/Taller de calentamiento-20180129/: BubbleSort.py  BubbleSort.res  CreateRandomArray.py  InsertionSort.py  InsertionSort.res  MergeSort.py  MergeSort.res  QuickSort.py  QuickSort.res  RunExperiment.py  create_figs.gnuplot
taller11/: Caballo.py  Taller11.lyx
taller12/: CocinaE.py  Taller12.lyx  resultados.txt
taller2/taller2/: CreateRandomArray.py  RunExperiment.py  Solucion1.py  Solucion1.res  Solucion2.py  Solucion2.res  create_figs.gnuplot
taller3/: Palindroma.py  palindromaBruta.py
taller3/Latex/: main.tex
taller4/taller4/: Punto1.py  Punto2.py  taller4.lyx
taller5/: LCS.py  Taller5.lyx
taller6/: ED2.py  ED3.py  ED_Doc.lyx  ED_Doc.lyx~  LCS.py
taller6/taller6/: ED.py  LIS.py  doc_taller6.lyx
taller7/: Count.py  DV.py  DV_TEST.py  DV_contodo.py  DarVueltas.lyx
taller8/: MyMatrix.h  RNTree.cxx  Taller8.lyx  leerArchivos.h  leerArchivos.hxx  taller.cxx
taller8/arbol/: ArbolBinarioOrd.h  ArbolBinarioOrd.hxx  MyMatrix.h  NodoBinario.h  NodoBinario.hxx
taller_estudio/: Cuadrado.py
