cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fpic")

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs 3 REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(ProPlayer.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(ProPlayer.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(ProPlayer python ProPlayer.i ProPlayer.cxx)
SWIG_LINK_LIBRARIES(ProPlayer ${PYTHON_LIBRARIES})
